@@ -1,3 +1,13 @@
+2021-06-28  Chris Dumez  <cdumez@apple.com>
+
+        NetworkProcessProxy::networkProcessDidTerminate() should copy process pools before iterating over them
+        https://bugs.webkit.org/show_bug.cgi?id=227468
+
+        Reviewed by Alex Christensen.
+
+        * UIProcess/Network/NetworkProcessProxy.cpp:
+        (WebKit::NetworkProcessProxy::networkProcessDidTerminate):
+
 2021-06-28  Sihui Liu  <sihui_liu@apple.com>
 
         Nullptr crash in ResourceLoadStatisticsDatabaseStore::allAttributedPrivateClickMeasurement
